--- a/index.html
+++ b/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DynForm</title>
 </head>
+
 <body>
+    <style>
+        span {
+            position: absolute;
+            display: inline-block;
+            left: 165px;
+        }
+
+        div {
+            margin: 5px;
+            position: relative;
+        }
+
+        #addstyle {
+            position: absolute;
+            left: 170px;
+            width: 350px;
+        }
+
+        textarea {
+            height: 100px;
+            width: 515px;
+            margin: 0px !important;
+        }
+
+        select {
+            position: absolute;
+            left: 170px;
+            width: 358px;
+        }
+        #inputCheck{
+        position: absolute;
+        left: 165px; 
+    }
+    </style>
     <script src="js/script.js"></script>
 </body>
+
 </html>
