--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         left: 165px; 
     }
     </style>
+    <input type="button" value="create dynform1" onclick="dynForm(formDef1)">
+    <input type="button" value="create dynform2" onclick="dynForm(formDef2)">
     <script src="js/script.js"></script>
 </body>
 
